Fixed issues with split featured secondary on Safari

--- a/site/web/app/themes/host/assets/css/main.css
+++ b/site/web/app/themes/host/assets/css/main.css
@@ -4341,6 +4341,8 @@ a.btn {
 .split-feature__secondary .grid {
   height: 100%;
   width: 100%;
+  -ms-flex-positive: 1;
+      flex-grow: 1;
 }
 
 .split-feature__secondary .slideshow {
